--- a/Assets/css/portfolio.css
+++ b/Assets/css/portfolio.css
@@ -33,18 +33,28 @@
 
 .grow {
 
-    height:600px;
+    height:400px;
+    top: 43%;
+    left: 29%;
     position: absolute;
-    float:center;
-    border-radius: 90px;
+
+    background:white;
+    padding-right: 300px;
+    padding-top: 50px;
+    padding-left: 50px;
+    padding-bottom: 50px;
+
 
 }
 
-.overlay {
 
-    height:100%;
-    width:100%;
-    background-color: rgba(22, 22, 22, 0.5)
+#overlay {
+
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: black;
 
 }
 
