--- a/Assets/css/portfolio.css
+++ b/Assets/css/portfolio.css
@@ -20,6 +20,11 @@
     border-radius:18px;
 }
 
+.graphic:hover {
+    cursor: pointer;
+    opacity: 0.8;
+}
+
 #ducks {
 
     justify-content: center;
@@ -33,35 +38,30 @@
 
 .grow {
 
-    height:400px;
-    top: 43%;
-    left: 29%;
-    position: absolute;
+    height:350px;
+    top: 26%;
+    left: 24.05%;
+    position: fixed;
 
     background:white;
-    padding-right: 300px;
-    padding-top: 50px;
-    padding-left: 50px;
-    padding-bottom: 50px;
-
+    padding-right: 380px;
+    padding-top: 40px;
+    padding-left: 40px;
+    padding-bottom: 40px;
 
 }
 
 
 #overlay {
-
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: black;
+    background: rgba(22, 22, 22, 0.5);
 
 }
 
-.big-boy-box{
 
-    background:white;
-    padding-right: 30px;
 
-}
     
